--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Whale Face: The Container Terminal Nobody Asked For But You're Getting Anyway.">
+  <meta name="author" content="Definitely Not Affiliated With Docker Inc.">
+  <meta name="theme-color" content="#007aff" />
+  <title>🐳 Whale Face</title>
+</head>
+
+<body>
+  <div id="root">
+  </div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
