--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/freewhaley-32.png" />
+  <link rel="apple-touch-icon" sizes="64x64" href="/freewhaley-64.png" />
+  <link rel="apple-touch-icon" sizes="128x128" href="/freewhaley-128.png" />
+  <link rel="apple-touch-icon" sizes="256x256" href="/freewhaley-256.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Whale Face: The Container Terminal Nobody Asked For But You're Getting Anyway.">
   <meta name="author" content="Definitely Not Affiliated With Docker Inc.">
   <meta name="theme-color" content="#007aff" />
-  <title>🐳 Whale Face</title>
+  <title>Free Whaley Face - Container Manager</title>
 </head>
 
 <body>
