--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <link rel="apple-touch-icon" sizes="128x128" href="/freewhaley-128.png" />
   <link rel="apple-touch-icon" sizes="256x256" href="/freewhaley-256.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Whale Face: The Container Terminal Nobody Asked For But You're Getting Anyway.">
-  <meta name="author" content="Definitely Not Affiliated With Docker Inc.">
+  <meta name="description"
+    content="Whaley Face is a container manager that helps you manage your containers with ease." />
+  <meta name="author" content="Tanner Bleakley" />
   <meta name="theme-color" content="#007aff" />
-  <title>Free Whaley Face - Container Manager</title>
+  <title>Whaley Face - Container Manager</title>
 </head>
 
 <body>
