--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" sizes="256x256" href="/freewhaley-256.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Whaley Face is a container manager that helps you manage your containers with ease." />
+    content="Whale Tracker is a container manager that helps you manage your containers with ease." />
   <meta name="author" content="Tanner Bleakley" />
   <meta name="theme-color" content="#007aff" />
   <title>Whaley Face - Container Manager</title>
